--- a/website.html
+++ b/website.html
@@ -12,34 +12,38 @@
     <div class="main">
     <div class="main1">Logo</div>
     <div class="main2">
-        <ul class="main3">
-        <li>Home</li>
+        <li>Work</li>
         <li>About</li>
-        <li>Resume</li>
-    </ul>
+        <li style="color: red;">Resume</li>
     </div>
-    <h1>Hello i'm Hrishikesh Paul.</h1>
-    <p>welcome i'm a <i>Frontend Software Engineer</i> at Reputation based out of Chicago,Illinois.I recently graduated from Indiana University with a Masters degree in Computer Science and i'm passionate about <b>Software Development,UX Design</b> and <b>Artificial Intelligence.</b></p>
-    <p>I'm currently working with</p>
-    <table>
-        <ul type="disc">
-            <li>React(TS)</li>
+    <div class="main3">
+        <div class="main3-left">
+    <div class="one"><h1>Hello i'm <br>Hrishikesh Paul.</h1> </div> <br>
+    <div class="two"><p>welcome i'm a <i>Frontend Software Engineer</i> at Reputation based out of Chicago,Illinois.I recently graduated from Indiana University with a Masters degree in Computer Science and i'm passionate about <b>Software Development,UX Design</b> and <b>Artificial Intelligence.</b></p></div><br>
+    <div class="three"><p>I'm currently working with</p> </div> <br>
+    <div class="four">
+        <div>
+            <li>React(JS)</li>
             <li>Flask(Python)</li>
             <li>WebSockets</li>
+        </div>
+        <div>
             <li>NodeJS</li>
             <li>HTML/SCSS</li>
             <li>GraphQL</li>
-        </ul>
-    </table>
-    <div class="main4">
-        <img src="./image.png" alt="" height="250px" width="250px">
+        </div> 
+    </div> <br>
+    <div class="five">
+        <div><button>Resume</button></div>
+        <div><i class="fi fi-brands-linkedin"></i></div>
+        <div><i class="fi fi-brands-github"></i></div>
+        <div><i class="fi fi-sr-envelope"></i></div>
     </div>
-    <button type="button">Resume</button>
+    </div>
+    <div class="main3-right">
+    <img src="./image.png" alt="image">
     </div>
 </div>
-
-
-
+</div>
 </body>
-
 </html>
