--- a/website.html
+++ b/website.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <div class="main">
+    <div>
+    <nav class="main">
     <div class="main1">Logo</div>
     <div class="main2">
         <li>Work</li>
         <li>About</li>
         <li style="color: red;">Resume</li>
     </div>
+    </nav>
     <div class="main3">
         <div class="main3-left">
     <div class="one"><h1>Hello i'm <br>Hrishikesh Paul.</h1> </div> <br>
