--- a/website.html
+++ b/website.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-    <div>
-    <nav class="main">
-    <div class="main1">Logo</div>
-    <div class="main2">
-        <li>Work</li>
-        <li>About</li>
-        <li style="color: red;">Resume</li>
-    </div>
-    </nav>
+    <header>
+        <div class="container">
+            <a href="#">Logo</a>
+            <nav>
+                <a href="#">Work</a>
+                <a href="#">About</a>
+                <li style="color: red;">Resume</li>
+            </nav>
+        </div>
+    </header>
     <div class="main3">
         <div class="main3-left">
     <div class="one"><h1>Hello i'm <br>Hrishikesh Paul.</h1> </div> <br>
